2000-09-24  Iain Holmes  <iain@helixcode.com>

	* gnome-canvas-pixbuf.c: Add an ANCHOR argument, like GnomeCanvasImage
	has.

Sat Sep 23 17:34:17 2000  George Lebl <jirka@5z.com>

	* gnome-calculator.c: use the gnome_i18n_push/pop_c_numeric_locale

	* gnome-font-picker.c, gnome-popup-help.c: include gnome-i18nP.h
	  and not gnome-i18n.h

Mon Sep 18 20:16:45 2000  George Lebl <jirka@5z.com>

	* gnome-recently-used.[ch]: use boilerplates, minor cleanup,
	  some precondition checks.  Add the maximum number of documents,
	  implemented simplistically, when adding check if there is more
	  then the <key-prefix>/MaximumSize (or 30 by default), and remove
	  the oldest entries until there is this.  This really doesn't
	  need to be perfect, a simple solution is better here I think.
	  Also rename gnome_recent_document_get to gnome_recent_document_peek

Mon Sep 18 19:02:34 2000  George Lebl <jirka@5z.com>

	* gnome-dateedit.c: use the boilerplate macros and switch to GParam

2000-09-16  Martin Baulig  <baulig@suse.de>

	* gnome-gconf.c: Very quick hack just to make it compile.

2000-09-16  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (GnomeSelector):
	- renamed the "do_add" signal to "do_add_file".
	- added "do_add_file_default", "do_add_directory" and
	"do_add_directory_default" signals.
	- added "get_file_list" signal.

	* gnome-selector.c:
	(add_file_handler): Renamed to `do_add_file_handler' and use
	the "do_add_file" signal instead of the "add_file" one.
	(add_file_default_handler): Likewise.
	(add_directory_handler): Likewise.
	(add_directory_default_handler): Likewise.
	(update_file_list_handler): Removed.
	(get_file_list_handler): New; implemnt "get_file_list" handler.

	* gnome-selectorP.h (GnomeSelectorPrivate): Removed `total_list'
	and `default_total_list' fields.

	* gnome-file-selector.c (update_file_list_handler): Removed.
	(add_directory_async_handler): Call the parent handler of the
	"do_add_directory" signal.
